Update testing utils