@@ -132,8 +132,7 @@
 
   <target name="test" depends="compile-test">
     <junit fork="yes">
-      <jvmarg value="-Djava.security.manager=allow"/>
-      <classpath>
+    <classpath>
       <pathelement location="build/classes" />   
       <pathelement location="lib/hamcrest-core-1.3.jar"/> 
       <pathelement location="lib/junit-4.12.jar"/>
